# octopii

./: .gitignore  Cargo.toml  DST_DETERMINISM_PLAN.md  DST_STATUS.md  RAFT_REPLICATION_BUG.md  RAFT_TEST_ANALYSIS.md  README.md  TIKV_TEST_INFRASTRUCTURE_SUMMARY.md  ci_log.txt  how_it_all_connects_to_each_other.md  plan.md
.github/workflows/: README.md  ci.yml  cluster-simulation-comprehensive.yml  cluster-simulation-long.yml  cluster-simulation-parallel.yml  cluster-simulation-stress.yml  cluster-simulation.yml  durability-tests.yml  integration-tests.yml  nightly.yml  raft-cluster-tests.yml  raft-comprehensive-tests.yml  raft-storage-sim.yml  sim-isolation-tests.yml  simulation-stress.yml  stress-tests.yml  unit-tests.yml  walrus-strict-tests.yml
docs/: API.md  ARCHITECTURE.md  CUSTOM_STATE_MACHINES.md  LIMITATIONS.md  RAFT.md  RAFT_INTERNALS.md  README.md  RPC_AND_TRANSPORT.md  SHIPPING_LANE.md  TIKV_TEST_PARITY_ANALYSIS.md  WAL.md  cluster-simulation-coverage-plan.md  custom_state_machines.md  simulation-walrus-coverage-plan.md
examples/: custom_state_machine.rs  raft_cluster.rs
examples/custom_state_machine/: main.rs
examples/node/: main.rs
examples/rpc/: main.rs
examples/rpc_shipping_lane/: main.rs
examples/runtime/: main.rs
examples/shipping_lane/: main.rs
examples/wal/: main.rs
raft-rs/src/: raft.rs
src/: chunk.rs  config.rs  error.rs  invariants.rs  lib.rs  node.rs  runtime.rs  shipping_lane.rs  sim_time.rs  simulation.rs  state_machine.rs
src/openraft/: mod.rs  network.rs  node.rs  sim_runtime.rs  storage.rs  types.rs
src/raft/: mod.rs  rpc.rs  state_machine.rs  storage.rs
src/rpc/: handler.rs  message.rs  mod.rs
src/transport/: mod.rs  peer.rs  sim.rs  tls.rs
src/wal/: mod.rs  walrus_docs.txt
src/wal/wal/: block.rs  (+5 more)
tests/: chaos_tests.rs  chunk_error_handling_test.rs  chunk_large_transfer_test.rs  chunk_mixed_scenarios_test.rs  chunk_parallel_stress_test.rs  chunk_transfer_test.rs  cluster_simulation.rs  cluster_simulation_comprehensive.rs  cluster_simulation_stress.rs  integration_test.rs  openraft_cluster_integration.rs  openraft_comprehensive_tests.rs  openraft_example_tests.rs  peer_sync_test.rs  raft_advanced_tests.rs  raft_chaos_tests.rs  raft_cluster_test.rs  raft_comprehensive_test.rs  raft_consistency_tests.rs  raft_core_tests.rs  raft_durability_test.rs  read_index_test.rs  rpc_test.rs  shipping_lane_test.rs  sim_isolation_tests.rs  simple_smoke_tests.rs  simulation.rs  state_machine_persistence_test.rs  transport_test.rs  wal_persistence_test.rs  wal_test.rs
tests/common/: cluster_invariants.rs  cluster_log_oracle.rs  cluster_oracle.rs  cluster_sim.rs  mod.rs
(+39 files in other folders)
