[package]
name = "octopii"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "io-util", "macros"] }
raft = "0.7"
quinn = "0.11"
bytes = { version = "1.10", features = ["serde"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
anyhow = "1.0"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
slog = "2.8"
protobuf = "2.28"
sha2 = "0.10"
