[package]
name = "octopii"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "io-util", "macros"] }
raft = "0.7"
quinn = "0.11"
bytes = { version = "1.10", features = ["serde"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
slog = "2.8"
protobuf = "2.28"
sha2 = "0.10"
futures = "0.3"
# Walrus WAL dependencies
rkyv = "0.7"
memmap2 = "0.9"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"

[dev-dependencies]
tempfile = "3"
