[package]
name = "octopii"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "io-util", "macros"] }
quinn = "0.11"
bytes = { version = "1.10", features = ["serde"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
slog = "2.8"
protobuf = "2.28"
sha2 = "0.10"
futures = "0.3"
rand = "0.8"
once_cell = "1.19"
# Walrus WAL dependencies
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = { version = "0.6", default-features = false }
memmap2 = "0.9"
libc = "0.2"
openraft = { path = "openraft/openraft", default-features = false, optional = true, features = ["serde", "type-alias", "tokio-rt"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"

[dev-dependencies]
tempfile = "3"

[lints.rust]
dead_code = "allow"
unused = "allow"

[features]
# Default to OpenRaft implementation
default = ["openraft"]
openraft = ["dep:openraft"]
openraft-filters = []
# Deterministic simulation testing - enables VFS virtualization layer
simulation = []
